<resources>
    <string name="app_name">Expense Tracker App</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_transaction_name">Enter transaction name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="note">Note</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="_0000">0000</string>
    <string name="total">Total</string>
    <string name="welcome_to_expense_tracker">Welcome to Expense Tracker</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="signup">Signup</string>
    <string name="signup_page">Signup page</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_registered_login_here">Already registered. Login here!</string>
    <string name="transaction_name">Transaction name</string>
    <string name="_200">200</string>
    <string name="notes_here">notes here...</string>
    <string name="edit">edit</string>
    <string name="home">Home</string>
</resources>