<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <View
            android:id="@+id/view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/green_circle" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLength="30"
            android:maxLines="1"
            android:text="@string/transaction_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="20dp"
            android:maxLength="30"
            android:maxLines="1"
            android:text="@string/_200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amount"
            android:layout_marginStart="20dp"
            android:maxLength="30"
            android:maxLines="1"
            android:text="@string/notes_here"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notes"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/edit" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>